--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -6,7 +6,7 @@
 
 {% if not current_user.is_anonymous %}
     <li class="dropdown">
-        <button type="button" style="margin-top: 12px" data-toggle="dropdown" class="dropdown-toggle btn btn-sm btn-primary">
+        <button type="button" style="margin-top: 12px; margin-right: 30px;" data-toggle="dropdown" class="dropdown-toggle btn btn-sm btn-primary">
           <i class="fa fa-plus"></i> {{ _("New") }}
         </button>
         <ul class="dropdown-menu">
