--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -1,6 +1,8 @@
 @import './less/index.less';
 @import "./less/cosmo/variables.less";
 
+@datasource-sql-expression-width: 500px;
+
 body {
     margin: 0px !important;
 }
@@ -230,10 +232,32 @@ table.table-no-hover tr:hover {
   cursor: initial;
 }
 
+.editable-title textarea {
+  outline: none;
+  background: transparent;
+  box-shadow: none;
+  cursor: initial;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
 .editable-title input[type="text"] {
   border: 1px solid #ccc;
   border-radius: 2px;
   padding: 2px;
+}
+
+.editable-title.datasource-sql-expression {
+  font-family: monospace;
+}
+
+.editable-title.datasource-sql-expression input {
+  width: @datasource-sql-expression-width;
+  padding-bottom: 5px;
+}
+
+.editable-title.datasource-sql-expression textarea {
+  width: @datasource-sql-expression-width;
 }
 
 .editable-title input[type="button"] {
