--- a/superset/templates/appbuilder/general/widgets/search.html
+++ b/superset/templates/appbuilder/general/widgets/search.html
@@ -3,7 +3,7 @@
 <div class="list-search-container">
     <form id="filter_form" class="form-search" method="get">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        <i class="fa fa-filter text-primary" aria-hidden="true"></i> {{_("Filter Results")}}
+        <i class="fa fa-filter text-primary" aria-hidden="true"></i> {{_("Filter")}}
         </button>
 
         <ul class="dropdown-menu">
