feat(custom_filter_ldap): Custom ldap filter support (#52)
* feat(custom_filter_ldap): Custom ldap filter support

UIC-947

* feat(custom_filter_ldap): remove commented code

UIC-947

* feat(custom_filter_ldap): Ansible changes added

UIC-947

* feat(custom_filter_ldap): AUTH_LDAP_SEARCH_FILTER env added in superset_config.py

UIC-947

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -70,6 +70,8 @@ spec:
           value: "{{ SUPERSET_AUTH_LDAP_TLS_KEYFILE }}"
         - name: AUTH_LDAP_SEARCH
           value: "{{ SUPERSET_AUTH_LDAP_SEARCH }}"
+        - name: AUTH_LDAP_SEARCH_FILTER
+          value: "{{ SUPERSET_AUTH_LDAP_SEARCH_FILTER }}"
         - name: AUTH_LDAP_UID_FIELD 
           value: "{{ SUPERSET_AUTH_LDAP_UID_FIELD }}"
         - name: AUTH_LDAP_FIRSTNAME_FIELD
