--- a/superset/templates/superset/basic.html
+++ b/superset/templates/superset/basic.html
@@ -41,7 +41,7 @@
     >
   </head>
 
-  <body>
+  <body {% if standalone_mode %}class="standalone"{% endif %}>
     {% block navbar %}
       {% if not standalone_mode %}
         <header class="top" role="header">
