Adjust how the height of the south pane is computed, fixing cypress tests

--- a/superset/assets/src/SqlLab/main.less
+++ b/superset/assets/src/SqlLab/main.less
@@ -194,6 +194,24 @@ div.Workspace {
     background-color: transparent !important;
 }
 
+.SqlLab {
+    .tab-content {
+        height: 100%;
+    }
+
+    #brace-editor {
+        height: calc(100% - 51px);
+    }
+
+    .ace_content {
+        height: 100%;
+    }
+
+    .SouthPane {
+        height: 100%;
+    }
+}
+
 .SqlEditor {
     display: flex;
     flex-direction: row;
