feat(change-logo): Updated Guavus logo in header (#66)
UIC-1022

--- a/superset/assets/stylesheets/guavus.less
+++ b/superset/assets/stylesheets/guavus.less
@@ -10,6 +10,12 @@
    display: inline-flex;
    padding-top: 5px;
 }
+
+.logo {
+  width: 92px;
+  height: 26px;
+}
+
 .header-divider-line {
     width: 1px;
     height: 23px;
