--- a/superset/templates/appbuilder/navbar.html
+++ b/superset/templates/appbuilder/navbar.html
@@ -30,7 +30,7 @@
       </button>
       <a class="navbar-brand" href="/superset/profile/{{ current_user.username }}/">
         <div class="header-img-div">
-          <img
+          <img class="logo"
             src="{{ appbuilder.app_icon }}"
             alt="{{ appbuilder.app_name }}"
           />
