#[UIC-882] Assign list of users to admin role in ldap and rest users with default role permission (#64)
* fix(LDAP_ROL):  Assign list of users to admin role in ldap

UIC-826

* fix(LDAP_ROL):  Empty string condition add

UIC-826

* fix(LDAP_ROL):  changed AUTH_USER_REGISTRATION_ROLE from admin to dashboard_viewer

UIC-826

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -86,6 +86,8 @@ spec:
           value: "{{ SUPERSET_AUTH_LDAP_APPEND_DOMAIN }}"
         - name: AUTH_LDAP_USERNAME_FORMAT
           value: "{{ SUPERSET_AUTH_LDAP_USERNAME_FORMAT }}"  
+        - name: AUTH_ADMIN_USER_LIST
+          value: "{{ SUPERSET_ADMIN_USER_LIST }}"  
         - name: APP_NAME
           value: "{{ RVF_APP_NAME }}"
         image: {{ superset_docker_image_name }}:{{ superset_image_tag }}
