--- a/superset/templates/superset/base.html
+++ b/superset/templates/superset/base.html
@@ -38,4 +38,7 @@
     {% with filename="preamble" %}
       {% include "superset/partials/_script_tag.html" %}
     {% endwith %}
+    {% with filename="login" %}
+      {% include "superset/partials/_script_tag.html" %}
+    {% endwith %}
   {% endblock %}
