fix(session): expose session lifetime variable for deployment (#75)
expose session lifetime variable for deployment

UIC-1000

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -90,6 +90,8 @@ spec:
           value: "{{ SUPERSET_ADMIN_USER_LIST }}"  
         - name: APP_NAME
           value: "{{ RVF_APP_NAME }}"
+        - name: SESSION_LIFETIME_SECONDS 
+          value: "{{ SUPERSET_SESSION_LIFETIME_SECONDS }}" 
         image: {{ superset_docker_image_name }}:{{ superset_image_tag }}
         name: superset
         ports:
