#[UIC-945] Added Help option in RVF (#77)
* UIC-945 : added help option

* feat(help option): Added online help option
UIC-945

* feat(help option): Added help option

UIC-945

* feat(help option): Added help option

* feat(help option): Added help option

UIC-945

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-deployment.yaml.j2
@@ -102,6 +102,8 @@ spec:
           value: "{{ SUPERSET_ADMIN_USER_LIST }}"  
         - name: APP_NAME
           value: "{{ RVF_APP_NAME }}"
+        - name: HELP_ENABLED
+          value: "{{ RVF_HELP_ENABLED }}"  
         - name: SESSION_LIFETIME_SECONDS 
           value: "{{ SUPERSET_SESSION_LIFETIME_SECONDS }}" 
         image: {{ superset_docker_image_name }}:{{ superset_image_tag }}
