--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -22,6 +22,7 @@
 {% if not locale %}
     {% set locale = 'en' %}
 {% endif %}
+{% set HELP_ENABLED = appbuilder.app.config.get('HELP_ENABLED') %}
 
 <!-- {% if not current_user.is_anonymous %}
     <li class="dropdown">
@@ -86,4 +87,12 @@
 {% else %}
     <li><a href="{{appbuilder.get_url_for_login}}">
     <i class="fa fa-fw fa-sign-in"></i>{{_("Login")}}</a></li>
+{% endif %}
+
+{% if HELP_ENABLED %}
+<li> 
+  <a href="/static/assets/help/index.html" target="_blank">
+  <img title="Help" src="/static/assets/images/help_Up.svg" />
+ </a>
+</li>
 {% endif %}
