fix(help-option): Fix size of help icon (#84)
UIC-945

--- a/superset/assets/stylesheets/guavus.less
+++ b/superset/assets/stylesheets/guavus.less
@@ -70,3 +70,8 @@ color: #fff;
 .navbar-default-template {
   background-color: @footer-bar-background-color;
 }
+
+.help-icon
+{
+  height: 20px; 
+}
