--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -92,7 +92,7 @@
 {% if HELP_ENABLED %}
 <li> 
   <a href="/static/assets/help/index.html" target="_blank">
-  <img title="Help" src="/static/assets/images/help_Up.svg" />
+  <img class="help-icon" title="Help" src="/static/assets/images/help_Up.svg"/>
  </a>
 </li>
 {% endif %}
