Allow charts to be scrollable

--- a/superset/assets/src/chart/chart.css
+++ b/superset/assets/src/chart/chart.css
@@ -16,6 +16,10 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+.chart-container {
+  overflow-x: auto;
+}
+
 .chart-tooltip {
   opacity: 0.75;
   font-size: 12px;
