[SQL Lab] Moved from React.PureComponent to React.Component
It also fixes an overlap between the results status label and the progress bar

--- a/superset/assets/src/SqlLab/main.less
+++ b/superset/assets/src/SqlLab/main.less
@@ -118,6 +118,9 @@ div.Workspace {
 .m-l-5 {
     margin-left: 5px;
 }
+.m-b-5 {
+    margin-bottom: 5px;
+}
 .m-b-10 {
     margin-bottom: 10px;
 }
