Moved actions, minor UI, allowed dashboard copy

--- a/superset/assets/src/dashboard/stylesheets/dashboard.less
+++ b/superset/assets/src/dashboard/stylesheets/dashboard.less
@@ -122,6 +122,7 @@ body {
     flex-wrap: nowrap;
     & > :nth-child(3) {
       border-radius: 2px 0px 0px 2px;
+      border-right: none;
     }
     & > :nth-child(4) {
       border-radius: 0px 2px 2px 0px;
