Update bug link to include more info and steps

--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -1,7 +1,7 @@
 <li>
   <a
     tabindex="-1"
-    href="https://jira.lyft.net/secure/CreateIssueDetails!init.jspa?pid=18701&issuetype=1"
+    href="https://jira.lyft.net/secure/CreateIssueDetails!init.jspa?pid=20963&issuetype=1&description=Superset%20Link%3A%0A%0AIssue%3A%0A%0ARepro%20Steps%20%28be%20descriptive%20as%20possible%29%3A%0A%0AScreenshot%3A"
     title="Report a bug"
   >
     <i class="fa fa-bug"></i>&nbsp;
