--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -536,3 +536,7 @@ tr.reactable-column-header th.reactable-header-sortable {
 .align-right {
   text-align: right;
 }
+.disabled {
+    pointer-events: none;
+    cursor: auto;
+  }
