fix(profile link ):  fixed ninja template syntax

--- a/superset/templates/appbuilder/navbar.html
+++ b/superset/templates/appbuilder/navbar.html
@@ -21,7 +21,11 @@
 {% set WARNING_MSG = appbuilder.app.config.get('WARNING_MSG') %}
 {% set app_icon_width = appbuilder.app.config.get('APP_ICON_WIDTH', 126) %}
 {% set logo_target_path = appbuilder.app.config.get('LOGO_TARGET_PATH') or '/profile/{}/'.format(current_user.username) %}
-{% set brand_classes = current_user.username ? 'navbar-brand' : 'navbar-brand disabled' %}
+{% if current_user.username %}
+  {% set brand_classes = 'navbar-brand' %}
+{% else %}
+  {% set brand_classes = 'navbar-brand disabled' %}
+{% endif %}
 
 <div class="navbar navbar-static-top {{menu.extra_classes}}" role="navigation">
   <div class="container-fluid">
