--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -581,5 +581,5 @@ tr.reactable-column-header th.reactable-header-sortable {
   text-align: right;
 }
 .margin-zero {
-  margin: 0px;
+  margin: 0px !important;
 }
