#[UIC-1177]:Exposing the whole Gunicorn config (#107)
* feature(gunicorn): Exposing the whole Gunicorn config so as to cater more config needs and Feature based jinja template generation

UIC-1177

* feature(gunicorn): Update version file
UIC-1177

* feature(gunicorn): add gevent package

UIC-1177

* feature(gunicorn): remove condition on IS_KERBEROS_ENABLED...

UIC-1177

--- a/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-configmap.yaml.j2
+++ b/superset-installer/etc/reflex-provisioner/roles/raf/superset/superset/templates/superset-configmap.yaml.j2
@@ -7,6 +7,27 @@ data:
     principalKey=`klist -tke /etc/security/keytabs/{{ superset_hive_keytab_name }} | grep '@' | awk -F' ' '{print $4}'|head -1`
     kinit -kt /etc/security/keytabs/{{ superset_hive_keytab_name }} $principalKey
 
+  docker-init.sh: |- 
+    #!/usr/bin/env bash
+
+    set -ex
+
+      echo "Initializing database"
+      superset db upgrade
+
+      echo "Creating default roles and permissions"
+      superset init
+
+    # To start a development web server, use the -d switch
+    
+      gunicorn --bind  0.0.0.0:{{ SUPERSET_CONTAINER_PORT }} \
+          --workers $((2 * {{ SUPERSET_NPROCESSORS }} + 1)) \
+          -k gevent \
+          --timeout {{ SUPERSET_SERVER_WORKER_TIMEOUT }} \
+          --limit-request-line 0 \
+          --limit-request-field_size 0 \
+          superset:app  
+
 kind: ConfigMap
 metadata:
   name: superset-configmap
