--- a/superset/templates/appbuilder/navbar_right.html
+++ b/superset/templates/appbuilder/navbar_right.html
@@ -23,6 +23,18 @@
     {% set locale = 'en' %}
 {% endif %}
 
+<script>
+  window.onload = () => {
+    var json_url = '/static/assets/version_info.json';
+
+    $.get(json_url)
+      .then(resp => {
+        var version = resp.GIT_SHA ? "GIT_SHA: " + resp.GIT_SHA.substring(0,8) : "Version: " + resp.version;
+        $("#version").attr("data-original-title", version);
+      });
+  }
+</script>
+
 {% if not current_user.is_anonymous %}
     <li class="dropdown">
         <button type="button" style="margin-top: 12px; margin-right: 30px;" data-toggle="dropdown" class="dropdown-toggle btn btn-sm btn-primary">
@@ -87,3 +99,19 @@
     <li><a href="{{appbuilder.get_url_for_login}}">
     <i class="fa fa-fw fa-sign-in"></i>{{_("Login")}}</a></li>
 {% endif %}
+
+<li>
+  <a href="javascript:void(0)" title="Version info" id="version">
+    <i class="fa fa-code-fork"></i> &nbsp;
+  </a>
+</li>
+ <li>
+  <a href="https://github.com/apache/incubator-superset" title="Superset's Github" target="_blank">
+    <i class="fa fa-github"></i> &nbsp;
+  </a>
+</li>
+<li>
+  <a href="https://superset.incubator.apache.org" title="Documentation" target="_blank">
+    <i class="fa fa-book"></i> &nbsp;
+  </a>
+</li>
