#[UIC-1242] Added automation framework to support ui automation for RVF (#136)
* feat(enable-e2e): enabling e2e test using selenium
UIC-1242

--- a/superset/templates/superset/base.html
+++ b/superset/templates/superset/base.html
@@ -38,7 +38,7 @@
     {% with filename="preamble" %}
       {% include "superset/partials/_script_tag.html" %}
     {% endwith %}
-    {% with filename="login" %}
+    <!-- {% with filename="login" %}
       {% include "superset/partials/_script_tag.html" %}
-    {% endwith %}
+    {% endwith %} -->
   {% endblock %}
