#[UIC-1310] BigNumberTotal Chart with two metrics field support | Absolute and Percentage (#149)
* feat(big-number-with-two-metrics): Added one percentage field in big number chart

BigNumberTotal Chart is now shown with two metrics, One with having absolute/percentage both and the other having only percentage

UIC-1310

* feat(big-number-with-two-metrics): Added percentage formatter for percentage metrics

UIC-1310

* feat(big-number-with-two-metrics): removed un-necessary check

UIC-1310

* feat(big-number-with-two-metrics): removed un-used variables and align fields to center

UIC-1310

--- a/superset/assets/src/visualizations/BigNumber/BigNumber.css
+++ b/superset/assets/src/visualizations/BigNumber/BigNumber.css
@@ -42,6 +42,12 @@
   font-weight: 600;
 }
 
+.big_number .bn_layout {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .big_number .header_line span {
   position: absolute;
   bottom: 0;
