--- a/superset/assets/src/visualizations/Table/Table.css
+++ b/superset/assets/src/visualizations/Table/Table.css
@@ -29,3 +29,7 @@ table.table thead th.sorting:after, table.table thead th.sorting_asc:after, tabl
 .like-pre {
   white-space: pre-wrap;
 }
+
+.selected-row {
+  background-color:#D0EED6 !important;
+}
